Ading new presentations

--- a/_includes/presentations.html
+++ b/_includes/presentations.html
@@ -11,7 +11,7 @@
   </h2>
 
   {% for pres in presentations %}
-    <div class="item">
+    <div class="item" style="margin-bottom: 15px">
         <div class="meta">
         <div class="upper-row">
       <span class="degree">
